objects/Vosf_Question_Choice__c.object
<CustomObject>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEditable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Place_Holder__c</fullName>
        <label>Place Holder</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Choice_Ext_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Question Choice Ext ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Question_Choice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Choice</label>
        <referenceTo>Vosf_Question_Choice__c</referenceTo>
        <relationshipLabel>Question Choices</relationshipLabel>
        <relationshipName>Question_Choices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Column__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Column</label>
        <referenceTo>Vosf_Question_Column__c</referenceTo>
        <relationshipLabel>Question Choices</relationshipLabel>
        <relationshipName>Question_Choices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Vosf_Question__c</referenceTo>
        <relationshipLabel>Question Choices</relationshipLabel>
        <relationshipName>Question_Choices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Range_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Range Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <formula>Question_Column__r.Sequence_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Input</fullName>
                </value>
                <value>
                    <fullName>Formula SUM</fullName>
                </value>
                <value>
                    <fullName>Formula Value</fullName>
                </value>
                <value>
                    <fullName>Formula Percentage</fullName>
                </value>
                <value>
                    <fullName>Output</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>TextArea</fullName>
                </value>
                <value>
                    <fullName>Slider</fullName>
                </value>
                <value>
                    <fullName>Combobox</fullName>
                </value>
                <value>
                    <fullName>Multiselect</fullName>
                </value>
                <value>
                    <fullName>Formula 1</fullName>
                </value>
                <value>
                    <fullName>Formula 2</fullName>
                </value>
                <value>
                    <fullName>Formula 3</fullName>
                </value>
                <value>
                    <fullName>Formula 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>prefix__c</fullName>
        <label>prefix</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>suffix__c</fullName>
        <label>suffix</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>Question Choice</label>
    <nameField>
        <displayFormat>QC-{YY}{MM}{00000}</displayFormat>
        <label>Question Choice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>